功能全部完成，没有经过全面测试，可能有bug。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ openProject:
   cmd: cmd /c start
   isOpen: true
   web:
-    openUrl: http://localhost:${server.port}/swagger-ui.html
+    openUrl: http://localhost:${server.port}/main.html
 server:
   port: 8091
   servlet:
